--- a/JustText/Base.lproj/MainMenu.xib
+++ b/JustText/Base.lproj/MainMenu.xib
@@ -261,7 +261,7 @@
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="335" y="390" width="480" height="388"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1440" height="900"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1792" height="1095"/>
             <view key="contentView" id="EiT-Mj-1SZ">
                 <rect key="frame" x="0.0" y="0.0" width="480" height="388"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -327,7 +327,7 @@
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="181" y="118" width="299" height="419"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1440" height="900"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1792" height="1095"/>
             <view key="contentView" id="SwY-ls-YB7">
                 <rect key="frame" x="0.0" y="0.0" width="299" height="419"/>
                 <autoresizingMask key="autoresizingMask"/>
@@ -337,7 +337,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                         <textFieldCell key="cell" selectable="YES" id="Oge-YS-fTj">
                             <font key="font" size="12" name="SFMono-Regular"/>
-                            <mutableString key="title">Um I don't code, none of this was created out of code, it was made with Xcode's Interface Builder which used to be it's own app, but Apple merged it with Xcode. Originally it came out on OpenStep, and then later Rhapsody(YAY! I LOVE Rhapsody!!!^-^) Later it was in Mac OS X in some version and then it was combined with Xcode, and it stayed like that in OS X, and it's still like that in macOS. Originally I only planed to mess with Interface Builder, but then I noticed that there was some text things that it looked like I could set up, One thing led to another, and here we are. Also the "Align" Toolbar buttons DO NOT work, I will probably tweak them some time later. Idk I'm not good with this stuff, I don't actaull know any code, I only know really well Figam. I think I'd be better off continueing Graphic Design than learning programing tbh. Also if you wan't to see what I make, go to https://macOSicons.com/U/Squid4572 . Markdown Tool, Courtesy the internet. I made the text veiw light because a issue, I will change it back to dark for Darkmode when I fix the issue.</mutableString>
+                            <string key="title">Um I don't code, none of this was created out of code, it was made with Xcode's Interface Builder which used to be it's own app, but Apple merged it with Xcode. Originally it came out on OpenStep, and then later Rhapsody(YAY! I LOVE Rhapsody!!!^-^) Later it was in Mac OS X in some version and then it was combined with Xcode, and it stayed like that in OS X, and it's still like that in macOS. Originally I only planed to mess with Interface Builder, but then I noticed that there was some text things that it looked like I could set up, One thing led to another, and here we are. Also the "Align" Toolbar buttons DO NOT work, I will probably tweak them some time later. Idk I'm not good with this stuff, I don't actaull know any code, I only know really well Figam. I think I'd be better off continueing Graphic Design than learning programing tbh. Also if you wan't to see what I make, go to https://macOSicons.com/U/Squid4572 . Markdown Tool, Courtesy the internet. I made the text veiw light because a issue, I will change it back to dark for Darkmode when I fix the issue.</string>
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
@@ -359,7 +359,7 @@
             <windowStyleMask key="styleMask" titled="YES" closable="YES" texturedBackground="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="181" y="118" width="299" height="72"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1440" height="900"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1792" height="1095"/>
             <view key="contentView" id="Ify-nG-ktj">
                 <rect key="frame" x="0.0" y="0.0" width="299" height="72"/>
                 <autoresizingMask key="autoresizingMask"/>
